--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -14,6 +14,7 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintVertical_bias="0.45"
     app:layout_constraintWidth_percent="0.75"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
