--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,7 +17,33 @@
 <resources>
   <!-- Base application theme. -->
   <style name="AppTheme" parent="Theme.Material3.DayNight.NoActionBar">
-    <!-- TODO Customize your theme here. -->
+    <item name="toolbarElevation">@dimen/toolbar_elevation</item>
+    <item name="toolbarStyle">@style/Widget.Toolbar</item>
+    <item name="appBarLayoutStyle">@style/Widget.AppBarLayout</item>
+
+  </style>
+
+  <style name="Widget.Toolbar" parent="Widget.Material3.Toolbar">
+    <item name="android:background">?attr/colorSurface</item>
+    <item name="android:elevation">?attr/toolbarElevation</item>
+    <item name="android:minHeight">?attr/actionBarSize</item>
+    <item name="navigationIconTint">?attr/colorOnSurface</item>
+    <item name="titleTextAppearance">@style/TextAppearance.Widget.AppCompat.Toolbar.Title.</item>
+    <item name="subtitleTextAppearance">@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle</item>
+  </style>
+
+  <style name="Widget.AppBarLayout" parent="Widget.Material3.AppBarLayout">
+    <item name="android:background">?attr/colorSurface</item>
+    <item name="android:elevation">?attr/toolbarElevation</item>
+
+  </style>
+
+  <style name="TextAppearance.Widget.AppCompat.Toolbar.Title." parent="TextAppearance.Material3.TitleLarge">
+    <item name="android:textColor">?attr/colorOnSurface</item>
+  </style>
+
+  <style name="TextAppearance.Widget.AppCompat.Toolbar.Subtitle." parent="TextAppearance.Material3.BodySmall">
+    <item name="android:textColor">?attr/colorOnSurface</item>
   </style>
 
 </resources>
