--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,25 +28,25 @@
 
 <!--Inheriting from a parent takes precedent over inheriting from the name-->
   <style name="Widget.ToolBar" parent="Widget.Material3.Toolbar">
-    <item name="android:background">?attr/colorSurface</item>
+    <item name="android:background">?attr/colorSurfaceVariant</item>
     <item name="android:elevation">?attr/toolbarElevation</item>
     <item name="android:minHeight">?attr/actionBarSize</item>
-    <item name="navigationIconTint">?attr/colorOnSurface</item>
+    <item name="navigationIconTint">?attr/colorOnSurfaceVariant</item>
     <item name="titleTextAppearance">@style/TextAppearance.Toolbar.Title</item>
     <item name="subtitleTextAppearance">@style/TextAppearance.Toolbar.Subtitle</item>
   </style>
 
   <style name="Widget.AppBarLayout" parent="Widget.Material3.AppBarLayout">
-    <item name="android:background">?attr/colorSurface</item>
+    <item name="android:background">?attr/colorSurfaceVariant</item>
     <item name="android:elevation">?attr/toolbarElevation</item>
   </style>
 
   <style name="TextAppearance.Toolbar.Title" parent="TextAppearance.Material3.TitleLarge">
-    <item name="android:textColor">?attr/colorOnSurface</item>
+    <item name="android:textColor">?attr/colorOnSurfaceVariant</item>
   </style>
 
   <style name="TextAppearance.Toolbar.Subtitle" parent="TextAppearance.Material3.BodySmall">
-    <item name="android:textColor">?attr/colorOnSurface</item>
+    <item name="android:textColor">?attr/colorOnSurfaceVariant</item>
   </style>
 
 </resources>
