--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,23 +27,23 @@
     <item name="android:background">?attr/colorSurface</item>
     <item name="android:elevation">?attr/toolbarElevation</item>
     <item name="android:minHeight">?attr/actionBarSize</item>
-    <item name="navigationIconTint">?attr/colorOnSurface</item>
+    <item name="navigationIconTint">?attr/colorOnSurfaceVariant</item>
     <item name="titleTextAppearance">@style/TextAppearance.Widget.AppCompat.Toolbar.Title.</item>
     <item name="subtitleTextAppearance">@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle</item>
   </style>
 
   <style name="Widget.AppBarLayout" parent="Widget.Material3.AppBarLayout">
-    <item name="android:background">?attr/colorSurface</item>
+    <item name="android:background">?attr/colorSurfaceVariant</item>
     <item name="android:elevation">?attr/toolbarElevation</item>
 
   </style>
 
   <style name="TextAppearance.Widget.AppCompat.Toolbar.Title." parent="TextAppearance.Material3.TitleLarge">
-    <item name="android:textColor">?attr/colorOnSurface</item>
+    <item name="android:textColor">?attr/colorOnSurfaceVariant</item>
   </style>
 
   <style name="TextAppearance.Widget.AppCompat.Toolbar.Subtitle." parent="TextAppearance.Material3.BodySmall">
-    <item name="android:textColor">?attr/colorOnSurface</item>
+    <item name="android:textColor">?attr/colorOnSurfaceVariant</item>
   </style>
 
 </resources>
