--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,8 @@
     <item name="toolbarElevation">@dimen/toolbar_elevation</item>
     <item name="toolbarStyle">@style/Widget.Toolbar</item>
     <item name="appBarLayoutStyle">@style/Widget.AppBarLayout</item>
+    <item name="colorSurfaceVariant">#FFFFC0C0</item>
+    <item name="colorOnSurfaceVariant">#FF400020</item>
   </style>
 
   <style name="Widget.Toolbar" parent="Widget.Material3.Toolbar">
