Implementation navigation drawer.

--- a/app/src/main/res/menu/main_options.xml
+++ b/app/src/main/res/menu/main_options.xml
@@ -3,9 +3,24 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
-  <item
-    android:id="@+id/sign_out"
-    android:title="@string/sign_out_title"
-    app:showAsAction="never"/>
+  <group
+    android:id="@+id/channels"
+    android:checkableBehavior="single"/>
+
+  <group
+    android:id="@+id/basic_action"
+    android:checkableBehavior="none">
+
+    <item
+      android:id="@+id/settings"
+      android:title="@string/settings_title"
+      android:icon="@drawable/settings"/>
+
+    <item
+      android:id="@+id/sign_out"
+      android:title="@string/sign_out_title"
+      android:icon="@drawable/logout"/>
+
+  </group>
 
 </menu>
