--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<androidx.drawerlayout.widget.DrawerLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  xmlns:app="http://schemas.android.com/apk/res-auto">
+  android:fitsSystemWindows="true"
+  tools:openDrawer="start">
 
-  <com.google.android.material.appbar.AppBarLayout
+  <include
+    android:id="@+id/app_bar_main"
+    layout="@layout/app_bar_main"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent"/>
 
-    <com.google.android.material.appbar.MaterialToolbar
-      android:id="@+id/toolbar"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"/>
-
-  </com.google.android.material.appbar.AppBarLayout>
-
-  <androidx.fragment.app.FragmentContainerView
-    android:id="@+id/nav_host_fragment"
-    android:layout_width="match_parent"
+  <com.google.android.material.navigation.NavigationView
+    android:id="@+id/nav_drawer"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:name="androidx.navigation.fragment.NavHostFragment"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    app:navGraph="@navigation/nav_graph"
-    app:defaultNavHost="true"/>
+    android:layout_gravity="start"
+    android:fitsSystemWindows="true"
+    app:menu="@menu/main_options"/>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+<!-- TODO Set menu for NavigationView above. -->
+
+<!-- TODO Set headerLayout in NavigationView above, as appropriate. -->
+
+</androidx.drawerlayout.widget.DrawerLayout>
