Simplify inter-activity-navigation.

--- a/app/src/main/res/navigation/login_nav_graph.xml
+++ b/app/src/main/res/navigation/login_nav_graph.xml
@@ -3,8 +3,12 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
-  android:id="@+id/nav_graph"
+  android:id="@+id/login_nav_graph"
   app:startDestination="@id/pre_login_fragment">
+
+  <action
+    android:id="@+id/show_main"
+    app:destination="@id/main_activity"/>
 
   <fragment
     android:id="@+id/pre_login_fragment"
@@ -14,12 +18,7 @@
     <action
       android:id="@+id/show_login"
       app:destination="@id/login_fragment"
-      app:popUpTo="@id/nav_graph"/>
-
-    <action
-      android:id="@+id/show_main"
-      app:destination="@id/main_activity"
-      app:popUpTo="@id/nav_graph"/>
+      app:popUpTo="@id/login_nav_graph"/>
 
   </fragment>
 
@@ -27,14 +26,7 @@
     android:id="@+id/login_fragment"
     android:name="edu.cnm.deepdive.chat.controller.LoginFragment"
     android:label="@string/login_fragment_label"
-    tools:layout="@layout/fragment_login">
-
-    <action
-      android:id="@+id/show_main"
-      app:destination="@id/main_activity"
-      app:popUpTo="@id/nav_graph"/>
-
-  </fragment>
+    tools:layout="@layout/fragment_login"/>
 
   <activity
     android:id="@+id/main_activity"
