--- a/app/src/main/res/menu/main_options.xml
+++ b/app/src/main/res/menu/main_options.xml
@@ -8,11 +8,11 @@
     android:checkableBehavior="single"/>
 
   <group
-    android:id="@+id/basic_action"
+    android:id="@+id/basic_actions"
     android:checkableBehavior="none">
 
     <item
-      android:id="@+id/settings"
+      android:id="@+id/settings_fragment"
       android:title="@string/settings_title"
       android:icon="@drawable/settings"/>
 
