--- a/app/src/main/res/menu/main_options.xml
+++ b/app/src/main/res/menu/main_options.xml
@@ -4,6 +4,17 @@
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <group
+    android:id="@+id/dev"
+    android:checkableBehavior="single">
+
+    <item
+      android:id="@+id/main_fragment"
+      android:title="@string/bearer_token_title"
+      android:orderInCategory="0"/>
+
+  </group>
+
+  <group
     android:id="@+id/channels"
     android:checkableBehavior="single"/>
 
@@ -15,7 +26,8 @@
       android:id="@+id/settings_fragment"
       android:title="@string/settings_title"
       app:showAsAction="never"
-      android:icon="@drawable/settings"/>
+      android:icon="@drawable/settings"
+      android:orderInCategory="1000"/>
 
     <item
       android:id="@+id/sign_out"
