--- a/app/src/main/res/menu/main_options.xml
+++ b/app/src/main/res/menu/main_options.xml
@@ -3,9 +3,37 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
-  <item
-    android:id="@+id/sign_out"
-    android:title="@string/sign_out_title"
-    app:showAsAction="never"/>
+  <group
+    android:id="@+id/dev"
+    android:checkableBehavior="single">
+
+    <item
+      android:id="@+id/main_fragment"
+      android:title="@string/bearer_token_title"
+      android:orderInCategory="0"/>
+
+  </group>
+
+  <group
+    android:id="@+id/channels"
+    android:checkableBehavior="single"/>
+
+  <group
+    android:id="@+id/basic_actions"
+    android:checkableBehavior="none">
+
+    <item
+      android:id="@+id/settings_fragment"
+      android:title="@string/settings_title"
+      android:icon="@drawable/settings"
+      android:orderInCategory="1000"/>
+
+    <item
+      android:id="@+id/sign_out"
+      android:title="@string/sign_out_title"
+      android:icon="@drawable/logout"
+      android:orderInCategory="1000"/>
+
+  </group>
 
 </menu>
