--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -3,4 +3,5 @@
   <integer name="history_cutoff_min">0</integer>
   <integer name="history_cutoff_max">24</integer>
   <integer name="history_cutoff_default">1</integer>
+  <integer name="max_message_lines">3</integer>
 </resources>
