--- a/app/src/main/res/layout/fragment_channel.xml
+++ b/app/src/main/res/layout/fragment_channel.xml
@@ -19,7 +19,8 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintBottom_toTopOf="@id/bottom_barrier"/>
+    app:layout_constraintBottom_toTopOf="@id/bottom_barrier"
+    tools:listitem="@layout/item_channel_message"/>
 
   <androidx.constraintlayout.widget.Barrier
     android:id="@+id/bottom_barrier"
