--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
   <dimen name="full_dynamic_spacing">16dp</dimen>
   <dimen name="half_dynamic_spacing">8dp</dimen>
   <dimen name="send_button_size">48dp</dimen>
+  <dimen name="avatar_width">48dp</dimen>
+  <dimen name="quarter_dynamic_spacing">4dp</dimen>
 </resources>
