--- a/app/src/main/res/layout/item_channel_message.xml
+++ b/app/src/main/res/layout/item_channel_message.xml
@@ -1,69 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:orientation="horizontal"
+  xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
-  >
+  android:padding="@dimen/half_dynamic_spacing">
 
   <ImageView
     android:id="@+id/avatar"
     android:layout_width="@dimen/avatar_width"
     android:layout_height="wrap_content"
+    android:importantForAccessibility="no"
     android:scaleType="fitCenter"
     android:adjustViewBounds="true"
-    android:layout_marginVertical="@dimen/full_dynamic_spacing"
-    android:layout_marginStart="@dimen/full_dynamic_spacing"
-    android:layout_marginEnd="@dimen/quarter_dynamic_spacing"
+    android:layout_marginVertical="@dimen/half_dynamic_spacing"
+    android:layout_marginStart="@dimen/half_dynamic_spacing"
+    android:layout_marginEnd="@dimen/half_static_spacing"
+    android:src="@drawable/portrait"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toStartOf="@id/author"
-    tools:ignore="ContentDescription"
-    tools:src="@drawable/avatar"/>
+    app:layout_constraintEnd_toStartOf="@id/author"/>
 
   <TextView
     android:id="@+id/author"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/full_dynamic_spacing"
-    android:layout_marginEnd="@dimen/quarter_dynamic_spacing"
-    android:layout_marginBottom="@dimen/quarter_dynamic_spacing"
-    android:layout_marginStart="@dimen/quarter_dynamic_spacing"
+    android:layout_marginHorizontal="@dimen/half_static_spacing"
+    android:includeFontPadding="false"
+    android:textIsSelectable="true"
     app:layout_constraintTop_toTopOf="@id/avatar"
     app:layout_constraintStart_toEndOf="@id/avatar"
-    app:layout_constraintBottom_toTopOf="@id/text"
     app:layout_constraintEnd_toStartOf="@id/posted"
-    app:layout_constraintHorizontal_weight="1"
-    tools:text="I'm an author!"/>
+    tools:text="Author Name"/>
 
   <TextView
     android:id="@+id/posted"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/full_dynamic_spacing"
-    android:layout_marginEnd="@dimen/full_dynamic_spacing"
-    android:layout_marginBottom="@dimen/quarter_dynamic_spacing"
-    android:layout_marginStart="@dimen/quarter_dynamic_spacing"
+    android:layout_marginStart="@dimen/half_static_spacing"
+    android:layout_marginEnd="@dimen/half_dynamic_spacing"
+    android:textAlignment="viewEnd"
+    android:includeFontPadding="false"
+    android:textIsSelectable="true"
     app:layout_constraintBaseline_toBaselineOf="@id/author"
     app:layout_constraintStart_toEndOf="@id/author"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintBottom_toTopOf="@id/text"
-    app:layout_constraintHorizontal_weight="1"
-    android:textAlignment="viewEnd"
-    tools:text="2025-07-03"/>
+    tools:text="7/2/25, 12:00 AM"/>
 
   <TextView
-    android:id="@+id/text"
+    android:id="@id/text"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/quarter_dynamic_spacing"
-    android:layout_marginBottom="@dimen/full_dynamic_spacing"
+    android:layout_marginVertical="@dimen/half_dynamic_spacing"
+    android:includeFontPadding="false"
+    android:textIsSelectable="true"
     app:layout_constraintTop_toBottomOf="@id/author"
-    app:layout_constraintEnd_toEndOf="@id/posted"
-    app:layout_constraintBottom_toBottomOf="@id/avatar"
     app:layout_constraintStart_toStartOf="@id/author"
-    tools:text="Here is my super awesome message! I hope it gets to its intended recipient; fingers crossed..."/>
+    app:layout_constraintEnd_toEndOf="@id/posted"
+    tools:text="Some message\nThis is the second line."/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
