--- a/app/src/main/res/layout/item_channel_message.xml
+++ b/app/src/main/res/layout/item_channel_message.xml
@@ -49,7 +49,7 @@
     tools:text="7/2/25, 12:00 AM"/>
 
   <TextView
-    android:id="@id/text"
+    android:id="@+id/text"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginVertical="@dimen/half_dynamic_spacing"
