--- a/app/src/main/res/layout/fragment_channel.xml
+++ b/app/src/main/res/layout/fragment_channel.xml
@@ -7,19 +7,18 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   tools:context=".controller.ChannelFragment">
 
-  <!-- TODO Add RecyclerView to display messages, an EditText for editing messages, and a button to send. -->
-
   <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/messages"
     android:layout_width="0dp"
     android:layout_height="0dp"
     android:orientation="vertical"
+    android:layout_marginBottom="@dimen/full_dynamic_spacing"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintBottom_toTopOf="@id/bottom_barrier"
-    android:layout_marginBottom="@dimen/full_dynamic_spacing"/>
+    tools:listitem="@layout/item_channel_message"/>
 
   <androidx.constraintlayout.widget.Barrier
     android:id="@+id/bottom_barrier"
